Insere entrada minsky - why programming...

--- a/artificial-inteligence.bib
+++ b/artificial-inteligence.bib
@@ -18,6 +18,17 @@
   year          = "2000"
 }
 
+@InBook{          minsky67:design,
+  author        = {Marvin Minsky},
+  title         = {Design and Planning II --- Computers in Design and
+                  Communication},
+  chapter       = {Why programming is a good medium for expressing poorly
+                  understood and sloppily­formulated ideas},
+  publisher     = {Visual Committee Books and Hastings House Publishers},
+  year          = 1967,
+  address       = {New York}
+}
+
 @Book{            mitchell97:machine,
   author        = "Tom M. Mitchell",
   title         = "Machine Learning",
