--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -29,6 +29,8 @@
 \usepackage{indentfirst}
 \onehalfspacing
 
+\renewcommand{\normalsize}{\@setfontsize\normalsize\@xiipt\@xivpt}
+
 %\renewcommand{\captionfont}{\small\itshape}
 
 %\addtolength{\headsep}{1cm}
