--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -18,6 +18,7 @@
 \usepackage{color}
 \RequirePackage{setspace}
 \RequirePackage[utf8,utf8x]{inputenc}
+\usepackage[T1]{fontenc}
 \RequirePackage{babel}
 \RequirePackage{ifthen}
 \RequirePackage{parskip}
