--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -25,7 +25,7 @@
 \RequirePackage{indentfirst}
 \usepackage{wasysym}
 \usepackage[font=it]{caption}
-\usepackage[FIGBOTCAP,TABBOTCAP]{subfigure}
+\usepackage{subfig}
 \usepackage{graphicx,url}
 \usepackage{indentfirst}
 \onehalfspacing
