--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -290,6 +290,13 @@
   address       = {New York}
 }
 
+@Book{            schoenberg54:structural,
+  author        = {Arnold Schoenberg},
+  title         = {Structural Functions of Harmony},
+  publisher     = {W.W. Norton},
+  year          = 1954,
+  address       = {New York}}
+
 @Book{            straus90:introduction,
   title         = {Introduction to post-tonal theory},
   publisher     = {Prentice Hall},
