--- a/programs.bib
+++ b/programs.bib
@@ -73,7 +73,7 @@
 }
 
 @Misc{            team07:sbcl,
-  author        = {SBCL development team},
+  author        = {{SBCL development team}},
   title         = {SBCL 1.0.13.45 User Manual},
   howpublished  = {Available at \url{www.sbcl.org/manual/}},
   year          = 2007
