fix tex character

--- a/ismir.bib
+++ b/ismir.bib
@@ -4584,7 +4584,7 @@
 
 @InProceedings{   knees07:search,
   author        = {Knees, Peter},
-  title         = {Search & Select - Intuitively Retrieving Music from Large
+  title         = {Search \& Select - Intuitively Retrieving Music from Large
                   Collections},
   booktitle     = proc-ismir2007,
   pages         = {177-178},
