--- a/kroger-en.bib
+++ b/kroger-en.bib
@@ -16,6 +16,19 @@
 @STRING{proc    = "Proceedings of the" }
 @STRING{groveol = "The New Grove Dictionary of Music and Musicians On-line" }
 
+@InProceedings{kroger08a:rameau,
+  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
+  title =        {Rameau: A System for Automatic Harmonic Analysis},
+  note = {To appear in the Proceedings of the 2008 International
+                  Computer Music Conference},
+  year =      2008}
+
+@InProceedings{kroger08:musicologia,
+  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
+  title =        {Musicologia computacional aplicada à análise dos corais de Bach [Computational musicology applied to the analysis of Bach's Chorales]},
+  note = {To appear in the Proceedings of the XVIII ANPPOM congress},
+  year =      2008}
+
 @Article{kroger08:managing,
   author =       {Pedro Kröger},
   title =        {Managing Csound Compositions with {GNU} {M}ake},
@@ -84,13 +97,6 @@
   year =	 2004,
   address = 	 {San Francisco},
   publisher =	 cma,
-}
-
-@InProceedings{kroeger04b:csoundxml,
-  author = 	 {Pedro Kröger},
-  title = 	 {CsoundXML: a meta-language in {XML} for sound synthesis},
-  booktitle =	 {Proceedings of the 5th International Conference on Music Information Retrieval},
-  year =	 2004,
 }
 
 @InProceedings{kroger03:mega-intruments,
