--- a/strings.bib
+++ b/strings.bib
@@ -14,3 +14,19 @@
                   Music Information Retrieval" }
 @STRING{proc-ismir2007="Proceedings of the 8th International Conference on
                   Music Information Retrieval" }
+
+@STRING{cma     = "The Computer Music Association" }
+@STRING{jnmr = "Journal of New Music Research"}
+@STRING{jasa = "Journal of the Acoustical Society of America"}
+@STRING{jaes = "Journal of the Engineering Society"}
+@STRING{cmj     = "Computer Music Journal" }
+@STRING{mp      = "Music Perception" }
+@STRING{pm      = "Psychology of Music" }
+@STRING{jmt     = "Journal of Music Theory" }
+@STRING{jrme    = "Journal of Research in Music Education"}
+@STRING{pnm     = "Perspectives of New Music" }
+@STRING{cmr     = "Contemporary Music Review" }
+@STRING{icmc    = "International Computer Music Conference" }
+@STRING{mit     = "The MIT Press" }
+@STRING{proc    = "Proceedings of the" }
+@STRING{groveol = "The New Grove Dictionary of Music and Musicians On-line" }
