--- a/genos.bib
+++ b/genos.bib
@@ -1,22 +1,22 @@
-@InProceedings{kroger08a:rameau,
+@InProceedings{kroger08:rameau,
   author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
   title =        {Rameau: A System for Automatic Harmonic Analysis},
   note = {To appear in the Proceedings of the 2008 International
                   Computer Music Conference},
   year =      2008}
 
-@InProceedings{kroger08b:rameau,
+
+@Unpublished{passos08:effect,
   author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio and Givaldo de Cidra},
   title =        {The effect of incorporating enharmonic information
                   on chord labeling algorithms},
-  note = {Esse artigo foi submetido para a 9th International
-                  Conference on Music Information Retrieval [avaliação ainda em processo]},
-  year =      2008}
+  year =      2008,
+  note =         {Unpublished paper available on request},
+}
 
-@InProceedings{kroger08c:rameau,
+@Unpublished{passos08:evaluation,
   author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio and Givaldo de Cidra},
   title =        {An evaluation of some algorithms for symbolic chord labeling},
-  note = {Esse artigo foi submetido para o Congresso da ANPPOM de
-                  2008, [avaliação ainda em processo]},
+  note =         {Unpublished paper available on request},
   year =      2008}
 
