use times fonts

--- a/latex/presentation-notes.sty
+++ b/latex/presentation-notes.sty
@@ -4,6 +4,7 @@
 \usepackage{fancyvrb}
 \usepackage{setspace}
 \usepackage{pifont}
+\usepackage{times}
 \usepackage{graphicx}
 
 \newcommand{\tocar}[1]{
