Insere livro de antokoletz - bartok

--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -11,7 +11,13 @@
   file          = {agawu04:how.pdf}
 }
 
-
+@Book{antokoletz90:music,
+  author        = {Elliott Antokoletz},
+  title         = {The Music of Béla Bartók: A Study of Tonality and Progression in Twentieth-Century Music},
+  publisher     = {University of California Press},
+  year          = 1990,
+  address       = {Berkeley}
+}
 
 @Article{honing04:comeback,
   author =       {Henkjan Honing},
