--- a/latex/ementa.sty
+++ b/latex/ementa.sty
@@ -132,6 +132,10 @@
 \newcommand{\mai}{ maio}
 \newcommand{\jun}{ junho}
 \newcommand{\jul}{ julho}
+\newcommand{\ago}{ agosto}
+\newcommand{\set}{ setembro}
+\newcommand{\oct}{ outubro}
+\newcommand{\nov}{ novembro}
 
 
 % Note that this package changes \em and \emph to be underline. To
