--- a/aula-composicao.bib
+++ b/aula-composicao.bib
@@ -1,4 +1,10 @@
 
+@Book{dallin64:techniques,
+  author =    {Leon Dallin},
+  title =        {Techniques of Twentieth Century Composition},
+  publisher =    {W.C. Brown},
+  year =         1964}
+
 @Book{            adler89:study,
   author        = {Samuel Adler},
   title         = {The Study of Orchestration},
