--- a/genos.bib
+++ b/genos.bib
@@ -1,8 +1,7 @@
 @InProceedings{kroger08:rameau,
   author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
   title =        {Rameau: A System for Automatic Harmonic Analysis},
-  note = {To appear in the Proceedings of the 2008 International
-                  Computer Music Conference},
+  booktitile = {Proceedings of the 2008 International Computer Music Conference},
   year =      2008}
 
 
