--- a/genos.bib
+++ b/genos.bib
@@ -1,3 +1,10 @@
+@InProceedings{kroger08:musicologia,
+  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de
+  Cidra and Nathanael de Souza Ourives and Emerson Soares dos Anjos and Wallace Silva dos Santos},
+  title =        {Musicologia computacional aplicada à análise dos corais de Bach},
+  booktitle = {Anais do XVIII Congresso da ANPPOM},
+  year =      2008}
+
 @InProceedings{kroger08:rameau,
   author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
   title =        {Rameau: A System for Automatic Harmonic Analysis},
