Corrige autores e insere address

--- a/dictionary.bib
+++ b/dictionary.bib
@@ -1,8 +1,9 @@
 
 @Book{            houaiss.ea01:dicionario,
   title         = {Dicionário Houaiss da língua portuguesa},
-  author        = {Houaiss, A. and de Salles Villar, M. and de Mello Franco,
-                  F.M.},
+  author        = {Antônio Houaiss and Mauro de Salles Villar and
+                  Francisco Manoel de Mello Franco},
   year          = {2001},
-  publisher     = {Objetiva}
+  publisher     = {Objetiva},
+  address       = {Rio de Janeiro}
 }
