Insere Practical Common Lisp

--- a/computer-science.bib
+++ b/computer-science.bib
@@ -118,6 +118,12 @@
   where         = {xmltransform.pdf}
 }
 
+@Book{            seibel05:practical,
+  author        = {Peter Seibel},
+  title         = {Practical Common Lisp},
+  publisher     = {Apress},
+  year          = 2005}
+
 @Book{            welch99:practical,
   author        = {Brent Welch},
   title         = {Practical Programming in Tcl and Tk},
@@ -132,3 +138,4 @@
   journal       = {Linux Magazine},
   year          = 2003
 }
+
