Insere Paul Graham (on lisp)

--- a/computer-science.bib
+++ b/computer-science.bib
@@ -28,6 +28,13 @@
   address       = {Boston, MA}
 }
 
+@Book{            graham94:lisp,
+  author        = {Paul Graham},
+  title         = {On Lisp: Advanced Techniques for Common Lisp},
+  publisher     = {Prentice Hall},
+  year          = 1994,
+  address       = {Englewood Cliffs, NJ}}
+
 @Book{            kaplan94:constructing,
   author        = {Randy M. Kaplan},
   title         = {Constructing language processors for little languages},
