Mais livro lisp

--- a/computer-science.bib
+++ b/computer-science.bib
@@ -125,6 +125,14 @@
   where         = {xmltransform.pdf}
 }
 
+@Book{            shapiro92:common,
+  author        = {Stuart Charles Shapiro},
+  title         = {Common LISP: an interactive approach},
+  publisher     = {Computer Science Press},
+  year          = 1992,
+  address       = {New York}
+}
+
 @Book{            seibel05:practical,
   author        = {Peter Seibel},
   title         = {Practical Common Lisp},
