Insere manual do emacs

--- a/programs.bib
+++ b/programs.bib
@@ -64,6 +64,14 @@
                   \url{www.geocities.com/mparker762/clawk.html#lexer}}
 }
 
+@Manual{          stallman07:gnu,
+  title         = {GNU Emacs Manual},
+  author        = {Richard Stallman},
+  organization  = {Free Software Foundation},
+  address       = {Boston},
+  edition       = 16. ed.,
+  year          = 2007}
+
 @Manual{          stallman.ea98:gnu,
   year          = {1998},
   address       = {Boston, MA},
