Insere manual do slime

--- a/programs.bib
+++ b/programs.bib
@@ -80,6 +80,13 @@
   title         = {GNU make: a program for directing recompilation}
 }
 
+@Misc{          team05:slime,
+  author        = {{Slime development team}},
+  title         = {Slime User Manual},
+  howpublished  = {Available at \url{common-lisp.net/project/slime/doc/slime.pdf}},
+  year          = 2005
+}
+
 @Misc{            team07:sbcl,
   author        = {{SBCL development team}},
   title         = {SBCL 1.0.13.45 User Manual},
