--- a/programs.bib
+++ b/programs.bib
@@ -69,7 +69,7 @@
   author        = {Richard Stallman},
   organization  = {Free Software Foundation},
   address       = {Boston},
-  edition       = 16. ed.,
+  edition       = {16. ed.},
   year          = 2007}
 
 @Manual{          stallman.ea98:gnu,
@@ -83,7 +83,7 @@
 @Misc{          team05:slime,
   author        = {{Slime development team}},
   title         = {Slime User Manual},
-  howpublished  = {Available at \url{common-lisp.net/project/slime/doc/slime.pdf}},
+  howpublished  = {Available at \url{www.common-lisp.net/project/slime/doc/slime.pdf}},
   year          = 2005
 }
 
