Conserta nome e key de livro

--- a/music-history.bib
+++ b/music-history.bib
@@ -54,8 +54,8 @@
                   1911.}
 }
 
-@Book{            almeida42:historia-da-musica-brasileira,
-  title         = {{História da música brasileira}},
+@Book{            almeida42:historia,
+  title         = {História da música brasileira},
   author        = {Renato Almeida},
   year          = {1942},
   publisher     = {F. Briguiet},
