Insere comunicação de foderaro sobre lisp

--- a/computer-science.bib
+++ b/computer-science.bib
@@ -20,6 +20,20 @@
   pages         = {147--148}
 }
 
+@article{         foderaro91:lisp,
+ author         = {John Foderaro},
+ title          = {LISP: introduction},
+ journal        = {Communications of the ACM},
+ volume         = 34,
+ number         = 9,
+ year           = 1991,
+ issn           = {0001-0782},
+ pages          = 27,
+ doi            = {http://doi.acm.org/10.1145/114669.114670},
+ publisher      = {ACM},
+ address        = {New York, NY, USA},
+ }
+
 @Book{            gancarz95:unix,
   author        = {M. Gancarz},
   title         = {The UNIX philosophy},
