Insere artigo genos de codificação na anppom 2006

--- a/genos.bib
+++ b/genos.bib
@@ -11,6 +11,11 @@
   booktitile = {Proceedings of the 2008 International Computer Music Conference},
   year =      2008}
 
+@InProceedings{kroger.ea06:processo,
+  author = {Pedro Kröger and Marcos di Silva and Givaldo de Cidra},
+  title = 	 {O processo de desenvolvimento de uma codificação para definir estruturas musicais},
+  booktitle = {Anais do XVI Congresso da ANPPOM},
+  year = 	 2006}
 
 @Unpublished{passos08:effect,
   author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio and Givaldo de Cidra},
