--- a/music-perception.bib
+++ b/music-perception.bib
@@ -1,4 +1,24 @@
 
+@Article{         davies.ea77:reproduction,
+  author        = {J. B. Davies and J. Jennings},
+  title         = {Reproduction of Familiar Melodies and the Perception of Tonal Sequences},
+  journal       = {Journal of the Acoustical Society of America },
+  year          = 1977,
+  volume        = 61,
+  number        = 2,
+  pages         = {534--541}
+}
+
+@Article{         dewitt.ea86:recognition,
+  author        = {Lucinda A. Dewitt and Robert G. Crowder},
+  title         = {Recognition of Melodies after Brief Delays},
+  journal       = {Music Perception},
+  year          = 1986,
+  volume        = 3,
+  number        = 3,
+  pages         = {259--274}
+}
+
 @Article{         dowling.ea71:contour,
   author        = {W. Jay Dowling and Diane S. Fujitani},
   title         = {Contour, interval and pitch recognition in memory for
@@ -16,6 +36,14 @@
   author        = {W. Jay Dowling and Dane L. Harwood}
 }
 
+@Book{            howell.ea85:musical,
+  editor        = {Peter Howell and Ian Cross and Robert West},
+  title         = {Musical Structure and Cognition},
+  publisher     = {Academic Press, Inc},
+  year          = 1985,
+  address       = {London}
+}
+
 @Article{         white60:recognition,
   author        = {Benjamin W. White},
   title         = {Recognition of distorted melodies},
@@ -24,3 +52,4 @@
   volume        = 73,
   pages         = {100--107}
 }
+
