--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -291,7 +291,7 @@
 }
 
 @Article{         morris95:compositional,
-  author        = {Robert Morris},
+  author        = {Robert D. Morris},
   title         = {Compositional Spaces and Other Territories},
   journal       = {Perspectives of New Music},
   year          = 1995,
