Insere dissertação de Marcos S. Sampaio

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -466,6 +466,15 @@
                   
 }
 
+@MastersThesis{   sampaio08:em,
+  author        = {{Marcos da Silva} Sampaio},
+  title         = {Em torno da romã: aplicações de operações de contornos na composição musical},
+  school        = {Escola de Música da Universidade Federal da Bahia},
+  year          = 2008,
+  address       = {Salvador, BA},
+  note          = {Dissertação aguardando defesa}
+}
+
 @Article{         schmuckler99:testing,
   author        = {Mark A. Schmuckler},
   title         = {Testing Models of Melodic Contour Similarity},
