Mais artigo sobre contorno melódico

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -58,6 +58,15 @@
   file          = {beard03:contour.pdf}
 }
 
+@Article{         brown68:program,
+  author        = {Charles T. Brown},
+  title         = {A program to determine the melodic contour of a melody},
+  journal       = {Student Musicologists in Minnesota},
+  year          = 1968,
+  volume        = 3,
+  pages         = {87--92}
+}
+
 @PhDThesis{       clifford95:contour,
   author        = {Robert John Clifford},
   title         = {Contour as a structural element in selected pre-serial
