--- a/genos.bib
+++ b/genos.bib
@@ -8,7 +8,7 @@
 @InProceedings{kroger08:rameau,
   author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
   title =        {Rameau: A System for Automatic Harmonic Analysis},
-  booktitile = {Proceedings of the 2008 International Computer Music Conference},
+  booktitle = {Proceedings of the 2008 International Computer Music Conference},
   year =      2008}
 
 @InProceedings{kroger.ea06:processo,
