Insere referência sobre espaços musicais em psicologia

--- a/music-perception.bib
+++ b/music-perception.bib
@@ -44,6 +44,16 @@
   address       = {London}
 }
 
+@InBook{          shepard82:structural,
+  author        = {Roger N. Shepard},
+  editor        = {Diana Deutch},
+  title         = {The Psychology of Music},
+  chapter       = {Structural Representations of Musica Pitch},
+  publisher     = {Academic Press},
+  year          = 1982,
+  address       = {New York}
+}
+
 @Article{         white60:recognition,
   author        = {Benjamin W. White},
   title         = {Recognition of distorted melodies},
