--- a/genos.bib
+++ b/genos.bib
@@ -9,6 +9,7 @@
   author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
   title =        {Rameau: A System for Automatic Harmonic Analysis},
   booktitle = {Proceedings of the 2008 International Computer Music Conference},
+  pages         = {273-281},
   year =      2008}
 
 @InProceedings{kroger.ea06:processo,
