Insere livro percepção Friedmann

--- a/music-perception.bib
+++ b/music-perception.bib
@@ -36,6 +36,14 @@
   author        = {W. Jay Dowling and Dane L. Harwood}
 }
 
+@Book{            friedmann90:ear,
+  author        = {Michael L. Friedmann},
+  title         = {Ear Training for Twentieth-Century Music},
+  publisher     = {Yale University Press},
+  year          = 1990,
+  address       = {New Haven}
+}
+
 @Book{            howell.ea85:musical,
   editor        = {Peter Howell and Ian Cross and Robert West},
   title         = {Musical Structure and Cognition},
