--- a/composition.bib
+++ b/composition.bib
@@ -124,3 +124,18 @@
   pages         = {xi, 168},
   address       = {New York}
 }
+
+@Book{leibowitz69:schoenberg,
+  author =    {Leibowitz, René},
+  title =        {Schoenberg},
+  publisher =    {Éditions du Seuil},
+  year =         1969,
+  address =   {Paris}}
+
+
+@Book{nono88:arnold,
+  editor =    {Nuria Schoenberg Nono},
+  title =        {Arnold Schönberg: Self-Portrait},
+  publisher =    {Belmont Music Publishers},
+  year =         1988}
+
