--- a/computer-music.bib
+++ b/computer-music.bib
@@ -279,7 +279,7 @@
   pages        = {48--52}
 }
 
-@Book{csound:book,
+@Book{boulanger00:book,
   editor       = {Richard Boulanger},
   title        = {The Csound Book},
   publisher    = {MIT Press},
@@ -1660,3 +1660,43 @@
   editor =	 {M. V. Mathews and J. R. Pierce},
   address =	 {Cambridge, MA}
 }
+
+@Book{cope04:virtual,
+  author =    {David Cope},
+  title =        {Virtual Music: Computer Synthesis of Musical Style},
+  publisher =    {The MIT Press},
+  year =         2004}
+
+
+@Book{taube04:notes,
+  author =    {Heinrich Taube},
+  title =        {Notes from the Metalevel: An Introduction to Computer Composition},
+  publisher =    {Routledge},
+  year =         2004}
+
+@Misc{taube08a:common,
+  Author =       {Heinrich Taube},
+  title =     {Common Music Dictionary},
+  year =      2008,
+  note =      {Disponível em \url{commonmusic.sourceforge.net/doc/dict/index.html}}}
+
+@Misc{taube08b:common,
+  Author =       {Heinrich Taube},
+  title =     {Common Music},
+  year =      2008,
+  note =      {Disponível em \url{commonmusic.sourceforge.net/doc/cm.html}}}
+
+@Book{agon06:openmusic,
+  editor =    {C. Agon, G. Assayag, J. Bresson},
+  title =        {THE OM COMPOSER'S BOOK},
+  publisher =    {Editions Delatour France/Ircam},
+  year =         2006,
+  volume =    1}
+
+@Book{agon08:openmusic,
+  editor =    {C. Agon, G. Assayag, J. Bresson},
+  title =        {THE OM COMPOSER'S BOOK},
+  publisher =    {Editions Delatour France/Ircam},
+  year =         2008,
+  volume =    2}
+
