--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -308,8 +308,10 @@
   year          = {1995},
   editor        = {Elizabeth West Marvin and Richard Hermann},
   address       = {Rochester, NY},
-  booktitle     = {Concert Music, Rock, and Jazz since}
+  booktitle     = {Concert Music, Rock, and Jazz since},
+  title         = {Concert Music, Rock, and Jazz since}
 }
+
 @Article{         morris95:compositional,
   author        = {Robert D. Morris},
   title         = {Compositional Spaces and Other Territories},
@@ -553,6 +555,16 @@
   annote        = {http://taylorandfrancis.metapress.com/index/GH5342293814655N.pdf}
                   ,
   publisher     = {Taylor \& Francis}
+}
+
+@Article{         schultz08:melodic,
+  author        = {Rob Schultz},
+  title         = {Melodic Contour and Nonretrogradable Structure in the Birdsong of Olivier Messiaen},
+  journal       = {Music Theory Spectrum},
+  year          = 2008,
+  volume        = 30,
+  number        = 1,
+  pages         = {89--137}
 }
 
 @Article{         scipio00:analysis,
