--- a/artificial-inteligence.bib
+++ b/artificial-inteligence.bib
@@ -55,3 +55,55 @@
   year          = 2002,
   edition       = {2nd}
 }
+
+@ARTICLE{mackay.ea95:hierarchical,
+    author = {David J. C. Mackay and Linda C. Bauman Petoy},
+    title = {A Hierarchical Dirichlet Language Model},
+    journal = {Natural Language Engineering},
+    year = 1995,
+    volume = 1,
+    pages = {1--19}
+}
+
+@TECHREPORT{mackay97:ensemble,
+    author = {David J. C. Mackay},
+    title = {Ensemble learning for hidden markov models},
+    institution = {Cambridge University},
+    year = 1997
+}
+
+@INPROCEEDINGS{beal.ea97:factorial,
+    author = {Matthew J. Beal and Zoubin Ghahramani and Carl Edward Rasmussen},
+    title = {Factorial hidden Markov models},
+    booktitle = {Machine Learning},
+    year = 1997,
+    pages = {29--245},
+    publisher = {MIT Press}
+}
+
+@article{ferguson73:bayesian,
+  title={{A Bayesian analysis of some nonparametric problems}},
+  author={Ferguson, T.S.},
+  journal={Ann. Statist},
+  volume=1,
+  number=2,
+  pages={209--230},
+  year=1973
+}
+
+@article{rasmussen00:infinite,
+  title={{The infinite Gaussian mixture model}},
+  author={Rasmussen, C.E.},
+  journal={Advances in Neural Information Processing Systems},
+  volume=12,
+  pages={554--560},
+  year=2000
+}
+
+@unpublished{teh07:dirichlet,
+author=         "Y. W. Teh",
+title=          "{D}irichlet Processes",
+note=           "Submitted to Encyclopedia of Machine Learning",
+year=           2007
+}
+
