--- a/internet.bib
+++ b/internet.bib
@@ -6,3 +6,11 @@
   url =     {http://tex.loria.fr/historique/interviews/knuth-clb1993.html}
 }
 
+@article{neumann82:first,
+  title={{First Draft of a Report on the EDVAC}},
+  author={von Neumann, J.},
+  journal={The origins of digital computers: selected papers},
+  pages={383--392},
+  url={http://www.zmms.tu-berlin.de/~modys/MRT1/2003-08-TheFirstDraft.pdf},
+  year=1982
+}
