Colocando livro de schonberg

--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -366,3 +366,10 @@
  publisher = {Kluwer Academic Publishers},
  address = {Hingham, MA, USA},
  }
+
+@book{schoenberg83:theory,
+  title={{Theory of Harmony}},
+  author={Schoenberg, A.},
+  year=1983,
+  publisher={University of California Press}
+}
