Colocando referencias da minha monografia

--- a/artificial-inteligence.bib
+++ b/artificial-inteligence.bib
@@ -107,3 +107,113 @@ note=           "Submitted to Encyclopedia of Machine Learning",
 year=           2007
 }
 
+@Book{manning.ea99:foundations,
+  title={{Foundations of Statistical Natural Language Processing}},
+  author={Manning Christopher, D. and Shutze, H.},
+  year=1999,
+  publisher={Cambridge: MIT Press}
+}
+
+@book{jurafsky.ea00:speech,
+  title={{Speech and Language Processing: An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition}},
+  author={Jurafsky, D. and Martin, J.H. and Kehler, A. and Vander Linden, K. and Ward, N.},
+  year=2000,
+  publisher={MIT Press}
+}
+
+@article{markov13:example,
+  title={{An example of statistical investigation in the text of
+                  ``Eugene Onegin'' illustrating coupling of
+                  ``tests'' in chains}},
+  author={Markov, A.A.},
+  journal={Proceedings of the Academy of Sciences, St. Petersburg},
+  volume=7,
+  pages={153--162},
+  year=1913
+}
+
+@article{baum.ea66:statistical,
+  title={{Statistical inference for probabilistic functions of finite state Markov chains}},
+  author={Baum, L.E. and Petrie, T.},
+  journal={Annals of Mathematical Statistics},
+  volume=37,
+  number=6,
+  pages={1554--1563},
+  year=1966
+}
+
+@article{viterbi67:error,
+  title={{Error bounds for convolutional codes and an asymptotically optimum decoding algorithm}},
+  author={Viterbi, A.},
+  journal={Information Theory, IEEE Transactions on},
+  volume=13,
+  number=2,
+  pages={260--269},
+  year=1967
+}
+
+@inproceedings{chai.ea01:folk,
+  title={{Folk music classification using hidden Markov models}},
+  author={Chai, W. and Vercoe, B.},
+  booktitle={Proceedings of International Conference on Artificial Intelligence},
+  volume=6,
+  number={6.4},
+  year=2001
+}
+
+@InProceedings{hoffman.ea08:data,
+  author =       {Matthew Hoffman and Perry Cook and David Blei},
+  title =        {Data-driven recomposition using the hierarchical dirichlet process hidden Markov model},
+  booktitle = {Proceedings of the 2008 International Computer Music Conference},
+  pages         = {695-701},
+  year =      2008}
+
+@article{shannon1948mtc,
+  title={{A mathematical theory of communications}},
+  author={Shannon, C.E. and Weaver, W.},
+  journal={Bell System Technical Journal},
+  volume={27},
+  number={2},
+  pages={632--656},
+  year={1948}
+}
+
+@article{cox46:probability,
+  title={{Probability, Frequency and Reasonable Expectation}},
+  author={Cox, RT},
+  journal={American Journal of Physics},
+  volume=14,
+  pages=1,
+  year=1946,
+  publisher={AAPT}
+}
+
+@article{baum.ea70:maximization,
+  title={A maximization technique occurring in the statistical analysis of probabilistic functions of Markov chains},
+  author={Baum, L.E. and Petrie, T. and Soules, G. and Weiss, N.},
+  journal={The Annals of Mathematical Statistics},
+  volume=41,
+  number=1,
+  pages={164--171},
+  year=1970
+}
+
+@article{gale.ea95:good,
+  title={{Good-turing frequency estimation without tears}},
+  author={Gale, W.A. and Sampson, G.},
+  journal={Journal of Quantitative Linguistics},
+  volume=2,
+  number=3,
+  pages={217--237},
+  year=1995,
+  publisher={Routledge}
+}
+
+@Article{good53:population,
+  author =       {I J Good},
+  title =        {The population frequencies of species and the estimation of population parameters},
+  journal =      {Biometrika},
+  year =         1953,
+  volume =    40,
+  number =    {237--264}}
+
