Mais referências da minha monografia

--- a/artificial-inteligence.bib
+++ b/artificial-inteligence.bib
@@ -217,3 +217,14 @@ year=           2007
   volume =    40,
   number =    {237--264}}
 
+
+@article{grother.ea97:fast,
+  title={{Fast implementations of nearest neighbor classifiers}},
+  author={Grother, P.J. and Candela, G.T. and Blue, J.L.},
+  journal={Pattern Recognition},
+  volume=30,
+  number=3,
+  pages={459--465},
+  year=1997,
+  publisher={Elsevier}
+}
