--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -334,3 +334,10 @@
   volume        = 3,
   address       = {Barcelona}
 }
+
+@book{mazzola.ea02:topos,
+  title={{The topos of music}},
+  author={Mazzola, G. and others},
+  year=2002,
+  publisher={Birkh{\"a}user}
+}
