--- a/programs.bib
+++ b/programs.bib
@@ -93,3 +93,18 @@
   howpublished  = {Available at \url{www.sbcl.org/manual/}},
   year          = 2007
 }
+
+@article{amsterdam90:iterate,
+  title={{The Iterate Manual}},
+  author={Amsterdam, J.},
+  year=1990,
+  journal={AIM-1236}
+}
+
+@article{nissen03:implementation,
+  title={{Implementation of a Fast Artificial Neural Network Library (fann)}},
+  author={Nissen, S.},
+  journal={Report, Department of Computer Science University of Copenhagen (DIKU)},
+  volume=31,
+  year=2003
+}
