Colocando referencias da bibliografia

--- a/artificial-inteligence.bib
+++ b/artificial-inteligence.bib
@@ -228,3 +228,17 @@ year=           2007
   year=1997,
   publisher={Elsevier}
 }
+
+@book{mackay03:information,
+  title={{Information Theory, Inference and Learning Algorithms}},
+  author={MacKay, D.J.C.},
+  year=2003,
+  publisher={Cambridge University Press}
+}
+
+@book{neal.ea93:probabilistic,
+  title={{Probabilistic Inference Using Markov Chain Monte Carlo Methods}},
+  author={Neal, R.M. and Department of Computer Science and University of Toronto},
+  year=1993,
+  publisher={Department of Computer Science, University of Toronto}
+}
